--- a/index.html
+++ b/index.html
@@ -8,311 +8,55 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js"></script>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, #FFD700 0%, #40E0D0 100%);
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #FFD700, #40E0D0);
             color: #1A3C34;
-            line-height: 1.8;
-            min-height: 100vh;
-            position: relative;
-            overflow-x: hidden;
+            margin: 0;
+            padding: 20px;
         }
-
         nav {
-            position: sticky;
-            top: 0;
-            background: rgba(248, 241, 233, 0.95);
-            backdrop-filter: blur(10px);
-            padding: 1.5rem;
+            background: rgba(248, 241, 233, 0.9);
+            padding: 10px;
             text-align: center;
-            z-index: 1000;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
-
         nav a {
             color: #1A3C34;
+            margin: 0 15px;
             text-decoration: none;
-            font-family: 'Inter', sans-serif;
-            font-size: 1.2rem;
-            margin: 0 1.5rem;
-            transition: color 0.3s ease;
         }
-
         nav a:hover {
             color: #FF6F61;
         }
-
         #add-article-link {
             display: none;
         }
-
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" opacity="0.2"><path d="M50 20c-10 0-15 10-15 20s10 15 20 15 15-10 15-20-10-15-20-15z" fill="%23FF6F61"/><path d="M30 50c-10 0-15 10-15 20s10 15 20 15 15-10 15-20-10-15-20-15z" fill="%23F8F1E9"/></svg>') repeat;
-            opacity: 0.2;
-            z-index: -2;
-            animation: floralDrift 30s infinite linear;
-        }
-
-        .particles {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: -1;
-        }
-
-        .particle {
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            background: rgba(255, 111, 97, 0.6);
-            border-radius: 50%;
-            animation: float 12s infinite ease-in-out;
-        }
-
-        .hero {
-            background: linear-gradient(135deg, rgba(255, 215, 0, 0.85), rgba(64, 224, 208, 0.75));
-            height: 600px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            position: relative;
-            z-index: 1;
-            overflow: hidden;
-        }
-
-        .hero-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle at center, rgba(248, 241, 233, 0.5), rgba(255, 111, 97, 0.6));
-            z-index: -1;
-            animation: gradientPulse 18s infinite ease-in-out;
-        }
-
-        .hero-content {
-            max-width: 1200px;
-            padding: 3rem;
-            animation: fadeInUp 2.2s ease-out;
-        }
-
         h1 {
-            font-family: 'Amiri', serif;
-            font-size: 5.5rem;
+            font-family: 'Georgia', serif;
             color: #F8F1E9;
-            text-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
-            margin-bottom: 1.2rem;
-        }
-
-        .hero p {
-            font-family: 'Amiri', serif;
-            font-size: 2.2rem;
-            color: #FF6F61;
-            text-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);
-        }
-
-        .tagline {
-            font-family: 'Inter', sans-serif;
-            font-size: 1.6rem;
-            color: #1A3C34;
-            margin-top: 1.2rem;
-            animation: pulseText 3s infinite ease-in-out;
-        }
-
-        .container {
-            max-width: 1400px;
-            margin: 5rem auto;
-            padding: 0 3rem;
-        }
-
-        .content-section {
-            background: rgba(248, 241, 233, 0.97);
-            border-radius: 35px;
-            padding: 5rem;
-            box-shadow: 0 15px 60px rgba(0, 0, 0, 0.25), inset 0 0 15px rgba(255, 111, 97, 0.4);
-            backdrop-filter: blur(15px);
-            animation: fadeIn 2.5s ease-out;
-        }
-
-        h2 {
-            font-family: 'Amiri', serif;
-            font-size: 3.8rem;
-            color: #1A3C34;
-            margin-bottom: 4rem;
             text-align: center;
-            text-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+            font-size: 3rem;
         }
-
-        .articles-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-            gap: 3rem;
-            margin-bottom: 4rem;
+        .articles {
+            max-width: 800px;
+            margin: 20px auto;
         }
-
         .card {
-            background: linear-gradient(145deg, #F8F1E9, #FFD700);
-            padding: 3rem;
-            border-radius: 25px;
-            border: 1px solid rgba(255, 111, 97, 0.4);
-            box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2), -10px -10px 30px rgba(255, 255, 255, 0.95);
-            transition: transform 0.5s ease, box-shadow 0.5s ease;
+            background: #F8F1E9;
+            padding: 20px;
+            margin: 10px 0;
+            border-radius: 10px;
             cursor: pointer;
-            position: relative;
-            aspect-ratio: 1 / 1.3;
-            animation: cardReveal 1.8s ease-out;
+            border: 1px solid #FF6F61;
         }
-
         .card:hover {
-            transform: translateY(-15px) rotateY(12deg);
-            box-shadow: 15px 15px 35px rgba(0, 0, 0, 0.25), -15px -15px 35px rgba(255, 255, 255, 0.95);
+            background: #FFD700;
         }
-
-        .card h4 {
-            font-family: 'Amiri', serif;
-            font-size: 2.2rem;
+        .card h3 {
             color: #1A3C34;
-            margin-bottom: 1.5rem;
-            text-align: center;
         }
-
         .card p {
-            font-family: 'Inter', sans-serif;
-            font-size: 1.2rem;
             color: #34495E;
-            line-height: 1.9;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-        }
-
-        .resource-list {
-            list-style: none;
-            padding: 0;
-            text-align: center;
-        }
-
-        .resource-list li {
-            margin-bottom: 1.5rem;
-        }
-
-        .resource-list a {
-            color: #40E0D0;
-            text-decoration: none;
-            font-size: 1.3rem;
-            font-family: 'Inter', sans-serif;
-            transition: color 0.3s ease, transform 0.3s ease;
-        }
-
-        .resource-list a:hover {
-            color: #FF6F61;
-            transform: translateX(8px);
-        }
-
-        footer {
-            text-align: center;
-            margin: 5rem 0;
-            font-size: 1.2rem;
-            color: #5A5A5A;
-        }
-
-        .visitor-counter {
-            margin-top: 1.5rem;
-            font-family: 'Amiri', serif;
-            font-size: 1.5rem;
-            color: #1A3C34;
-        }
-
-        #visitor-count {
-            font-weight: 700;
-            color: #FF6F61;
-            animation: pulseCount 2.5s infinite ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(70px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(50px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        @keyframes gradientPulse {
-            0% { background: radial-gradient(circle at center, rgba(248, 241, 233, 0.5), rgba(255, 111, 97, 0.6)); }
-            50% { background: radial-gradient(circle at center, rgba(255, 111, 97, 0.6), rgba(248, 241, 233, 0.5)); }
-            100% { background: radial-gradient(circle at center, rgba(248, 241, 233, 0.5), rgba(255, 111, 97, 0.6)); }
-        }
-
-        @keyframes floralDrift {
-            0% { background-position: 0 0; }
-            100% { background-position: 150px 150px; }
-        }
-
-        @keyframes float {
-            0% { transform: translateY(100vh) scale(0.8); opacity: 0.3; }
-            50% { opacity: 0.8; }
-            100% { transform: translateY(-100vh) scale(1.3); opacity: 0; }
-        }
-
-        @keyframes pulseCount {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.15); }
-            100% { transform: scale(1); }
-        }
-
-        @keyframes pulseText {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.05); }
-            100% { transform: scale(1); }
-        }
-
-        @keyframes cardReveal {
-            from { opacity: 0; transform: rotateY(-30deg); }
-            to { opacity: 1; transform: rotateY(0); }
-        }
-
-        @media (max-width: 768px) {
-            .hero { height: 500px; }
-            h1 { font-size: 4rem; }
-            .hero p { font-size: 1.8rem; }
-            .tagline { font-size: 1.4rem; }
-            .container { padding: 0 2rem; }
-            .content-section { padding: 3.5rem; }
-            h2 { font-size: 3rem; }
-            .articles-grid { grid-template-columns: 1fr; }
-            .card h4 { font-size: 1.8rem; }
-            .card p { font-size: 1.1rem; }
-            .visitor-counter { font-size: 1.3rem; }
-            nav a { font-size: 1.1rem; margin: 0 1rem; }
-        }
-
-        @media (max-width: 480px) {
-            h1 { font-size: 3.2rem; }
-            .hero p { font-size: 1.5rem; }
-            .tagline { font-size: 1.2rem; }
-            .content-section { padding: 2.5rem; }
-            h2 { font-size: 2.5rem; }
         }
     </style>
 </head>
@@ -321,37 +65,8 @@
         <a href="index.html">Home</a>
         <a href="add-content.html" id="add-article-link">Add Article</a>
     </nav>
-    <div class="particles">
-        <div class="particle" style="left: 10%; animation-delay: 0s;"></div>
-        <div class="particle" style="left: 30%; animation-delay: 5s;"></div>
-        <div class="particle" style="left: 50%; animation-delay: 10s;"></div>
-        <div class="particle" style="left: 70%; animation-delay: 3s;"></div>
-        <div class="particle" style="left: 90%; animation-delay: 7s;"></div>
-    </div>
-    <div class="hero">
-        <div class="hero-overlay"></div>
-        <div class="hero-content">
-            <h1>Al-Noor: Sanctuary of the Heart</h1>
-            <p>“Indeed, in the remembrance of Allah do hearts find rest” (Quran 13:28)</p>
-            <p class="tagline">We hear you, and you're not alone.</p>
-        </div>
-    </div>
-    <div class="container">
-        <section class="content-section">
-            <h2>A Haven for Your Soul</h2>
-            <div class="articles-grid" id="articles"></div>
-            <h3>Guiding Lights</h3>
-            <ul class="resource-list">
-                <li><a href="https://quran.com" target="_blank">Quran.com: Read and Listen</a> <!-- Keyword: quran --></li>
-                <li><a href="https://sunnah.com" target="_blank">Sunnah.com: Hadith Collection</a> <!-- Keyword: hadith --></li>
-                <li><a href="https://yaqeeninstitute.org" target="_blank">Yaqeen Institute: Islamic Research</a> <!-- Keyword: islamic research --></li>
-            </ul>
-        </section>
-        <footer>
-            <p>Created with dua for those seeking Allah’s light © 2025</p>
-            <p class="visitor-counter"><span id="visitor-count">0</span> hearts have found solace here</p>
-        </footer>
-    </div>
+    <h1>Al-Noor: Sanctuary of the Heart</h1>
+    <div class="articles" id="articles"></div>
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js';
         import { getFirestore, collection, getDocs } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js';
@@ -370,16 +85,8 @@
         const db = getFirestore(app);
         const auth = getAuth(app);
 
-        document.addEventListener('DOMContentLoaded', async function() {
-            document.body.style.background = 'linear-gradient(135deg, #FFD700 0%, #40E0D0 100%)';
-
-            // Visitor counter
-            let visitorCount = sessionStorage.getItem('visitorCount') || 0;
-            visitorCount = parseInt(visitorCount) + 1;
-            sessionStorage.setItem('visitorCount', visitorCount);
-            document.getElementById('visitor-count').textContent = visitorCount;
-
-            // Show/hide Add Article link based on auth
+        document.addEventListener('DOMContentLoaded', async () => {
+            // Show/hide Add Article link
             onAuthStateChanged(auth, (user) => {
                 document.getElementById('add-article-link').style.display = user ? 'inline' : 'none';
             });
@@ -392,32 +99,16 @@
             if (articles.length === 0) {
                 articles.push({
                     title: 'The Unseen Hands of Mercy',
-                    content: `When a heart shatters, it feels as though the world has dimmed, and light may never again pierce the encroaching shadows. Yet, it is precisely in these moments of profound vulnerability that Allah's grace manifests most beautifully. He doesn't always heal us with a sudden, miraculous erasure of pain. Often, His healing comes through the unseen hands of kindness—the comfort offered by a loyal friend, the wise counsel of a family elder, or the unexpected empathy of a stranger. These are not mere coincidences; they are conduits of Divine love, sent to guide us back to wholeness.
-
-Consider the gentle words of the Quran, a sacred scripture that resonates with promises of peace and resilience. Verses remind us that with every hardship, there is ease, a testament to Allah's unwavering presence. He provides strength when our own seems to falter, whispering patience into our souls and resilience into our spirits.
-
-<h4>Finding Solace in Remembrance</h4>
-One of the most potent forms of healing Allah bestows is the gift of remembrance (Dhikr). When our hearts are heavy, turning to Him in prayer, reflection, or supplication can be like finding an oasis in a parched desert. The very act of acknowledging His greatness and surrendering our pain to His will brings an incredible lightness. It's in this surrender that we realize we are not alone in our suffering; we are cradled in the vastness of His love.
-
-Sometimes, healing manifests in the wisdom we gain from our trials. The very experiences that break us can also build us anew, forging a stronger, more compassionate self. Allah, in His infinite wisdom, allows these experiences not to punish, but to purify and elevate us. He sends insights, often through quiet introspection or the words of spiritual guides, that help us reframe our pain into purpose.
-
-<h4>The Dawn After the Darkness</h4>
-Healing is rarely a linear path; it's a journey of gentle steps forward, sometimes a few steps back, but always with the promise of a dawn after the longest night. Allah's healing is a continuous unfolding, a testament to His infinite patience and endless love. He orchestrates circumstances, touches hearts, and inspires actions that collectively weave a tapestry of recovery.
-
-Ultimately, the most profound healing Allah offers is the mending of our connection with Him. In our brokenness, we are often drawn closer to our Creator, seeking solace and strength where worldly remedies fall short. And in that renewed connection, we find not just comfort for a shattered heart, but a profound and lasting peace that transcends all earthly sorrow. It's a beautiful, soul-deep healing, made possible through the endless compassion of the Divine.`,
+                    content: 'When a heart shatters, Allah’s grace heals through kindness and remembrance...',
                     media: ''
                 });
             }
             articles.forEach((article, index) => {
-                const articleDiv = document.createElement('div');
-                articleDiv.className = 'card';
-                articleDiv.onclick = () => window.location.href = `article.html?id=${index}`;
-                const snippet = article.content.split(' ').slice(0, 20).join(' ') + '...';
-                articleDiv.innerHTML = `
-                    <h4>${article.title}</h4>
-                    <p>${snippet}</p>
-                `;
-                articlesContainer.appendChild(articleDiv);
+                const div = document.createElement('div');
+                div.className = 'card';
+                div.onclick = () => window.location.href = `article.html?id=${index}`;
+                div.innerHTML = `<h3>${article.title}</h3><p>${article.content.substring(0, 50)}...</p>`;
+                articlesContainer.appendChild(div);
             });
         });
     </script>
