--- a/article.html
+++ b/article.html
@@ -7,9 +7,10 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Roboto', sans-serif;
             background: linear-gradient(135deg, #FFD700, #40E0D0);
             color: #1A3C34;
             margin: 0;
@@ -24,6 +25,7 @@
             color: #1A3C34;
             margin: 0 15px;
             text-decoration: none;
+            font-family: 'Roboto', sans-serif;
         }
         nav a:hover {
             color: #FF6F61;
@@ -31,27 +33,43 @@
         #add-article-link {
             display: none;
         }
-        h2 {
-            font-family: 'Georgia', serif;
-            color: #1A3C34;
-            text-align: center;
-        }
         .article {
             max-width: 800px;
             margin: 20px auto;
-            background: #F8F1E9;
-            padding: 20px;
-            border-radius: 10px;
-            border: 1px solid #FF6F61;
+            background: #FFFFFF; /* White background for article */
+            padding: 30px;
+            border-radius: 12px;
+            border: 1px solid #E0E0E0;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            font-family: 'Playfair Display', serif;
+            color: #000000; /* Black font */
+            font-size: 2.5rem;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        #article-content {
+            font-family: 'Roboto', sans-serif;
+            color: #000000; /* Black font */
+            font-size: 1.1rem;
+            line-height: 1.8;
+        }
+        #article-content video {
+            max-width: 100%;
+            margin: 20px 0;
+            border-radius: 8px;
         }
         .back-link {
             display: inline-block;
-            margin: 20px;
-            padding: 10px;
+            margin: 20px 0 0 20px;
+            padding: 10px 20px;
             background: #1A3C34;
             color: #F8F1E9;
             text-decoration: none;
             border-radius: 5px;
+            font-family: 'Roboto', sans-serif;
+            transition: background 0.2s ease;
         }
         .back-link:hover {
             background: #FF6F61;
@@ -73,14 +91,14 @@
         import { getFirestore, collection, getDocs } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js';
         import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js';
 
-     const firebaseConfig = {
-  apiKey: "AIzaSyC8xFENc723EWYajdQG_EIFW2b7MK_SoCI",
-  authDomain: "test-c6eb1.firebaseapp.com",
-  projectId: "test-c6eb1",
-  storageBucket: "test-c6eb1.firebasestorage.app",
-  messagingSenderId: "277025947734",
-  appId: "1:277025947734:web:82b4b4cdc4ce0b6728fbf7"
-};
+        const firebaseConfig = {
+            apiKey: "AIzaSyC8xFENc723EWYajdQG_EIFW2b7MK_SoCI",
+            authDomain: "test-c6eb1.firebaseapp.com",
+            projectId: "test-c6eb1",
+            storageBucket: "test-c6eb1.firebasestorage.app",
+            messagingSenderId: "277025947734",
+            appId: "1:277025947734:web:82b4b4cdc4ce0b6728fbf7"
+        };
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
         const auth = getAuth(app);
