--- a/index.html
+++ b/index.html
@@ -7,30 +7,39 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background: #FFFFFF; /* White background for entire page */
+            background: #FFFFFF; /* White background */
             color: #000000; /* Black text */
             margin: 0;
-            padding: 20px;
+            padding: 0;
+            line-height: 1.6;
         }
         nav {
-            background: #FFFFFF; /* White background for nav */
-            padding: 10px;
+            background: #FFFFFF; /* White background */
+            padding: 15px 20px;
             text-align: center;
-            border-bottom: 1px solid #E0E0E0; /* Subtle gray border */
+            border-bottom: 1px solid #E0E0E0;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+            position: sticky;
+            top: 0;
+            z-index: 100;
         }
-        nav a {
-            color: #000000; /* Black text for nav links */
-            margin: 0 15px;
+        nav a, nav button {
+            color: #000000; /* Black text */
+            margin: 0 20px;
             text-decoration: none;
             font-family: 'Roboto', sans-serif;
-            font-size: 1.1rem;
+            font-size: 1.2rem;
+            font-weight: 400;
+            background: none;
+            border: none;
+            cursor: pointer;
+            transition: color 0.3s ease;
         }
-        nav a:hover {
+        nav a:hover, nav button:hover {
             color: #333333; /* Dark gray on hover */
         }
         #add-article-link {
@@ -40,42 +49,134 @@
             font-family: 'Playfair Display', serif;
             color: #000000; /* Black text */
             text-align: center;
-            font-size: 3rem;
-            margin-bottom: 20px;
+            font-size: 3.5rem;
+            font-weight: 700;
+            margin: 40px 0;
+            letter-spacing: 0.02em;
         }
         .articles {
-            max-width: 800px;
-            margin: 20px auto;
-            background: #FFFFFF; /* White background for article container */
-            padding: 20px;
-            border-radius: 12px;
-            border: 1px solid #E0E0E0; /* Subtle gray border */
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            max-width: 1200px; /* Wider for modern layout */
+            margin: 40px auto;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 0 20px;
         }
         .card {
-            background: #FFFFFF; /* White background for cards */
-            padding: 20px;
-            margin: 10px 0;
-            border-radius: 8px;
-            border: 1px solid #E0E0E0; /* Subtle gray border */
+            background: #FFFFFF; /* White background */
+            padding: 25px;
+            border-radius: 10px;
+            border: 1px solid #E0E0E0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
             cursor: pointer;
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
         .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            transform: translateY(-8px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
         }
         .card h3 {
             font-family: 'Playfair Display', serif;
             color: #000000; /* Black text */
             font-size: 1.8rem;
+            font-weight: 700;
             margin-bottom: 10px;
+            letter-spacing: 0.01em;
         }
         .card p {
             font-family: 'Roboto', sans-serif;
             color: #000000; /* Black text */
+            font-size: 1.1rem;
+            font-weight: 300;
+            line-height: 1.7;
+            margin: 0;
+        }
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+        .modal-content {
+            background: #FFFFFF; /* White background */
+            max-width: 500px;
+            width: 90%;
+            padding: 30px;
+            border-radius: 10px;
+            border: 1px solid #E0E0E0;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
+        .modal-content h2 {
+            font-family: 'Playfair Display', serif;
+            color: #000000; /* Black text */
+            font-size: 2rem;
+            font-weight: 700;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .modal-content .form-group {
+            margin-bottom: 20px;
+        }
+        .modal-content label {
+            display: block;
+            font-family: 'Roboto', sans-serif;
+            color: #000000; /* Black text */
+            font-size: 1.1rem;
+            font-weight: 400;
+            margin-bottom: 8px;
+        }
+        .modal-content input, .modal-content textarea {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #E0E0E0;
+            border-radius: 6px;
+            font-family: 'Roboto', sans-serif;
+            color: #000000; /* Black text */
             font-size: 1rem;
-            line-height: 1.6;
+            font-weight: 300;
+            box-sizing: border-box;
+        }
+        .modal-content textarea {
+            height: 120px;
+            resize: vertical;
+        }
+        .modal-content button[type="submit"] {
+            width: 100%;
+            padding: 12px;
+            background: #000000; /* Black button */
+            color: #FFFFFF;
+            border: none;
+            border-radius: 6px;
+            font-family: 'Roboto', sans-serif;
+            font-size: 1.1rem;
+            font-weight: 400;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+        .modal-content button[type="submit"]:hover {
+            background: #333333; /* Dark gray on hover */
+        }
+        .modal-content .close {
+            position: absolute;
+            top: 15px;
+            right: 20px;
+            font-size: 1.5rem;
+            color: #000000;
+            cursor: pointer;
+            font-weight: 700;
+        }
+        /* Accessibility */
+        .card:focus, nav a:focus, nav button:focus, .modal-content button:focus {
+            outline: 2px solid #000000;
+            outline-offset: 2px;
         }
     </style>
 </head>
@@ -83,9 +184,34 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="add-content.html" id="add-article-link">Add Article</a>
+        <button id="contact-btn">Contact Us</button>
     </nav>
     <h1>Al-Noor: Sanctuary of the Heart</h1>
     <div class="articles" id="articles"></div>
+
+    <!-- Contact Form Modal -->
+    <div class="modal" id="contact-modal">
+        <div class="modal-content">
+            <span class="close" id="close-modal">×</span>
+            <h2>Contact Us</h2>
+            <form id="contact-form" action="https://formspree.io/f/xwpbarqd" method="POST">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required placeholder="Your name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required placeholder="Your email">
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" required placeholder="Your question or message"></textarea>
+                </div>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </div>
+
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js';
         import { getFirestore, collection, getDocs } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js';
@@ -124,9 +250,28 @@
             articles.forEach((article, index) => {
                 const div = document.createElement('div');
                 div.className = 'card';
+                div.tabIndex = 0; // Make card focusable
                 div.onclick = () => window.location.href = `article.html?id=${index}`;
+                div.onkeydown = (e) => { if (e.key === 'Enter') window.location.href = `article.html?id=${index}`; };
                 div.innerHTML = `<h3>${article.title}</h3><p>${article.content.substring(0, 50)}...</p>`;
                 articlesContainer.appendChild(div);
+            });
+
+            // Contact form modal
+            const modal = document.getElementById('contact-modal');
+            const btn = document.getElementById('contact-btn');
+            const closeBtn = document.getElementById('close-modal');
+            const form = document.getElementById('contact-form');
+
+            btn.onclick = () => modal.style.display = 'flex';
+            closeBtn.onclick = () => modal.style.display = 'none';
+            window.onclick = (event) => {
+                if (event.target === modal) modal.style.display = 'none';
+            };
+            form.addEventListener('submit', () => {
+                modal.style.display = 'none';
+                form.reset();
+                alert('Thank you! Your message has been sent.');
             });
         });
     </script>
